css/main.css
@font-face {
    font-family: 'couturebold';
    src: url('../fonts/couture-bold-webfont.eot');
    src: url('../fonts/couture-bold-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/couture-bold-webfont.woff2') format('woff2'),
         url('../fonts/couture-bold-webfont.woff') format('woff'),
         url('../fonts/couture-bold-webfont.ttf') format('truetype'),
         url('../fonts/couture-bold-webfont.svg#couturebold') format('svg');
    font-weight: normal;
    font-style: normal;

}

html, body, header, p, a, h1, h2, h3, button, span {
	margin: 0;
	padding: 0;
}

body {
    width: 100%;
    height: 100%;
    text-align: center;
    color: #FFF;
    background-color: #EEE;
    font-family: 'Open Sans', Arial, sans-serif;
    font-weight: 300;    
}

header {
    width: 100%;
    height: 100px;
    position: fixed;
    background-color: #FFF;
}

h1 {
    font-family: 'couturebold', Arial, sans-serif;
    font-weight: normal;
    font-size: 84px;
}

h2  {
    font-style: italic;
    font-weight: 300; 
}

h3 {
    display: inline;
    font-weight: 300;
    font-size: 21px;
}

.container {
    width: 100%;
    height: auto;
}

#search_container {
    width: 100%;
    height: auto;
    background-color: #3f91e4;
}

#search_div {
    width: 100%;
    max-width: 800px;
    height: auto;
    display: inline-block;
    margin-top: 175px;
    padding-bottom: 25px;
}

input#search_bar {
    width: 80%;
    height: 20%;
    min-height: 40px;
    margin-top: 30px;
    padding-left: 10px;
    border-radius: 5px;
    border: none;
}

.suggestion {
    width: 630px;
    height: 30px;
    display: none;
    text-align: left;
    padding-left: 10px;
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
    background-color: #EEE;
    color: #000;
    font-style: italic;
    line-height: 30px;
    cursor: pointer;
}

.suggestion h3 {
    font-size: 18px;
}

#filters {
    background-color: #3f91e4;
}

.filter_container {
    width: 100%;
    height: 40px;
    margin-top: 5px;
}

.active_filter_container{    
    height: 300px;
    background-color: #CECECE;
    border: 1px solid #083290;
}

#loc.active_filter_container {
    background: url(../images/location.jpg) center no-repeat;
}

input#loc_search {
    width: 600px;
    height: 30px;
    display: inline-block;
    margin-top: 30px;
    padding-left: 10px;
    border-radius: 5px;
    border: none;
}

#suggestion_loc_search {
    width: 590px;
}

span {
    width: 100%;
    height: 10px;
    display: inline-block;
}

.filter_div {
    width: 630px;
    height: 100%;
    display: inline-block;
    padding-left: 10px;
    border: 1px solid #083290;
    color: #083290;
    line-height: 40px;
    text-align: left;
}

.active_filter_div{
    height: 60px;
    margin-top: 50px;
    border: none;
    overflow: hidden;
}

.active_takeover{
    height: 150px;
    display: none;
    border: none;
    padding: 0;
    text-align: center;
    line-height: normal;
}

h2.filter_title {
    height: 40px;
    display: inline-block;
    margin-right: 5px;
}

h2.filter_inner_title {
    margin-top: 50px;
    font-family: 'couturebold', Arial;
    font-size: 30px;
    font-style: normal;
    color: #333;
}

.filter {
    height: 30px;
    width: auto;
    display: inline-block;
    line-height: 30px;
    border: 1px solid #089058;
    background-color: #1cf87e;
    color: #089058;
    cursor: pointer;
}

.filter h3 {
    margin-right: 5px;
}

h3.filter_X {
    width: 25px;
    margin-left: 5px;
    font-weight: normal;
}

h3.arrow {
    width: 50px;
    height: 40px;
    float: right;
    text-align: center;
    background-color: #083290;
    color: #3f91e4;
    cursor: pointer;
}

.filter:hover  {
    border: 1px solid #a20d0d;
    background-color: #f64343;
    color: #a20d0d;
}

